ghost/ghost-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ghost
  name: ghost
spec:
  ports:
    - name: "3001"
      port: 3001
      protocol: TCP
      targetPort: 2368
  selector:
    app: ghost
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  labels: 
    app: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - image: ghost
          name: ghost
          ports:
            - containerPort: 2368
          volumeMounts:
            - mountPath: /var/lib/ghost/content
              name: ghost
      restartPolicy: Always
      volumes:
        - name: ghost
          persistentVolumeClaim:
            claimName: ghost-pvc
