ghost/ingress-ghost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ghost
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: le-dns
spec:
  rules:
  - host: blog.YOUR_DOMAIN.COM
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ghost
            port:
              number: 3001
  tls:
    - hosts:
      - blog.YOUR_DOMAIN.COM
      secretName: cloudflare-api-token
